feat(fetch): Fetch de instruções
* A estrutura de arquivos foi levemente alterada para melhor encapsular as funções do processador.

--- a/003_project/pqp-interpreter/Makefile
+++ b/003_project/pqp-interpreter/Makefile
@@ -2,7 +2,7 @@ TARGET = build/pqp-interpreter
 
 FLAGS = -Wall -O3 -g -Iinclude
 
-OBJECTS = main.o cpu.o mem.o
+OBJECTS = main.o cpu.o mem.o fetch.o
 
 all: $(OBJECTS)
 	gcc $(OBJECTS) -o $(TARGET)
@@ -15,6 +15,9 @@ cpu.o: src/cpu.c
 
 mem.o: src/mem.c
 	gcc $(FLAGS) -c src/mem.c -o mem.o
+
+fetch.o: src/fetch.c
+	gcc $(FLAGS) -c src/fetch.c -o fetch.o
 
 clean:
 	rm -f $(TARGET) $(OBJECTS)
