--- a/.github/workflows/build-latex-docs.yml
+++ b/.github/workflows/build-latex-docs.yml
@@ -17,8 +17,9 @@ jobs:
         sudo apt install texlive-full -y
     - name: Compile LaTeX Docs
       run: |
-        pdflatex \\nonstopmode\\input 002_documentacao/index.tex
-        pdflatex \\nonstopmode\\input 002_documentacao/index.tex
+        cd 002_documentacao
+        pdflatex \\nonstopmode\\input index.tex
+        pdflatex \\nonstopmode\\input index.tex
     - name: Upload Artifact
       uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
       with:
