--- a/.github/workflows/build-latex-docs.yml
+++ b/.github/workflows/build-latex-docs.yml
@@ -24,4 +24,4 @@ jobs:
       uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
       with:
         name: documentacao-grupo-1
-        path: index.pdf
+        path: 002_documentacao/index.pdf
